@startuml

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor WhiteSmoke
  BorderColor DarkSlateGray
  ArrowColor DarkSlateGray
}

class Customer {
  + **id : Integer {PK}**
  full_name : String
  email : String
}

class Bank {
  + **id : Integer {PK}**
  name : String
  account_number_validity_pattern : String
  check_validity_pattern : String
}

class Account {
  + **account_number : String {PK}**
  <color:Blue>customer_id : Integer {FK}</color>
  <color:Blue>bank_id : Integer {FK}</color>
  balance : Float
}

class BankingTransaction {
  + **id : Integer {PK}**
  <color:Blue>account_number : String {FK}</color>
  transaction_type : String
  amount : Float
  transaction_date : Timestamp
}

class Loan {
  + **id : Integer {PK}**
  <color:Blue>account_number : String {FK}</color>
  loan_amount : Float
  loan_status : String
}

class BankCheck {
  + **id : Integer {PK}**
  <color:Blue>account_number : String {FK}</color>
  check_number : String
  check_amount : Float
  check_status : String
}

class LoanMonitoring {
  + **id : Integer {PK}**
  <color:Blue>loan_id : Integer {FK}</color>
  risk_status : String
  loan_provider_status : String
}

Customer "1" -- "0..n" Account
Bank "1" -- "0..n" Account
Account "1" -- "0..n" BankingTransaction
Account "1" -- "0..n" BankCheck
Account "1" -- "0..n" Loan
Loan "1" -- "1" LoanMonitoring

@enduml